--- a/index.html
+++ b/index.html
@@ -141,14 +141,14 @@
 			
 			<div class="menu">
 				
-				<a href="./HP.html" class="menu-left"><img src="./images/Logo.png" alt="main-logo"></a>
+				<a href="./index.html" class="menu-left"><img src="./images/Logo.png" alt="main-logo"></a>
 				<div class="menu-btn">
 					<div class="menu-btn-burger"></div>
 				</div>
 
 				<div class="hidden-menu">
 					<div class="menu-right menu-mobile">
-						<a href="./HP.html">Domů</a>
+						<a href="./index.html">Domů</a>
 						<a href="./kurzy.html">Kurzy</a>
 	
 						<a href="https://www.lato.cz" >Lato.cz</a>
